# ai-check

./: Readme  docker-compose.yml
go-api/: Dockerfile  go.mod  go.sum  main.go  main_integration_test.go
go-api/internal/auth/: middleware.go
go-api/internal/grpcclient/: client.go
go-api/internal/handlers/: handlers.go  handlers_test.go
go-api/internal/imageprocessor/: imageprocessor.go
go-api/internal/logging/: logger.go  operation_error.go
go-api/internal/repository/: verification_repository.go  verification_repository_test.go
go-api/internal/usecase/: cache.go  metrics.go  verification.go  verification_test.go
go-api/migrations/: 20240215001_add_sha1_hash.sql
go-api/proto/: verify.pb.go  verify.proto
rust-service/: Cargo.toml  Dockerfile  build.rs
rust-service/src/: image.rs  lib.rs  main.rs  triton_client.rs
rust-service/tests/: triton_serialization.rs
triton/models/face_verification/: config.pbtxt  model.onnx
triton/models/id_ocr/: config.pbtxt  model.plan
