[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tonic = { version = "0.10", features = ["transport", "tls"] }
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
byteorder = "1.5"
http = "0.2"

[build-dependencies]
tonic-build = "0.10"
